--- a/homepanel/templates/homepanel/person.html
+++ b/homepanel/templates/homepanel/person.html
@@ -65,7 +65,7 @@
                     {% endif %}
 
                     <span class="bold">Zgoda na fotografowanie:</span>
-                    {% if training_person.person.photographing_agreement == False %}
+                    {% if training_person.photographing_agreement == False %}
                         Nie
                     {% else %}
                         Tak
