--- a/coordinatepanel/templates/coordinatepanel/participants.html
+++ b/coordinatepanel/templates/coordinatepanel/participants.html
@@ -28,6 +28,18 @@
                                     {% if obj|has_birthday %}
                                          <i class="fa fa-birthday-cake blue"></i>
                                     {% endif %}
+                                    {% if obj|which_batch|divisibleby:10 %}
+                                         <i class="fa fa-trophy blue" title={{ obj|which_batch }}></i>
+                                    {% endif %}
+                                    {% if obj|which_batch == 1 %}
+                                         <i class="fa fa-child blue" title="Pierwszy raz"></i>
+                                    {% endif %}
+                                    {% if not obj.photographing_agreement %}
+                                         <i class="fa fa-eye-slash blue" title="Brak zgody na fotografowanie"></i>
+                                    {% endif %}
+                                    {% if obj.participant.warning %}
+                                        <i class="fa fa-exclamation-triangle blue" title="Przypał"></i>
+                                    {% endif %}
                                     {% if obj.is_paid is True %}
                                         <span class="green medium-bold">(zapłacono)</span>
                                     {% elif obj.is_part_paid is True %}
@@ -77,6 +89,18 @@
                                     </a>
                                     {% if obj|has_birthday %}
                                          <i class="fa fa-birthday-cake blue"></i>
+                                    {% endif %}
+                                    {% if obj|which_batch|divisibleby:10 %}
+                                         <i class="fa fa-trophy blue" title={{ obj|which_batch }}></i>
+                                    {% endif %}
+                                    {% if obj|which_batch == 1 %}
+                                         <i class="fa fa-child blue" title="Pierwszy raz"></i>
+                                    {% endif %}
+                                    {% if not obj.photographing_agreement %}
+                                         <i class="fa fa-eye-slash blue" title="Brak zgody na fotografowanie"></i>
+                                    {% endif %}
+                                    {% if obj.participant.warning %}
+                                        <i class="fa fa-exclamation-triangle blue" title="Przypał"></i>
                                     {% endif %}
                                     {% if obj.is_paid is True %}
                                         <span class="green medium-bold">(zapłacono)</span>
@@ -133,6 +157,18 @@
                                     {% if obj|has_birthday %}
                                          <i class="fa fa-birthday-cake blue"></i>
                                     {% endif %}
+                                    {% if obj|which_batch|divisibleby:10 %}
+                                         <i class="fa fa-trophy blue" title={{ obj|which_batch }}></i>
+                                    {% endif %}
+                                    {% if obj|which_batch == 1 %}
+                                         <i class="fa fa-child blue" title="Pierwszy raz"></i>
+                                    {% endif %}
+                                    {% if not obj.photographing_agreement %}
+                                         <i class="fa fa-eye-slash blue" title="Brak zgody na fotografowanie"></i>
+                                    {% endif %}
+                                    {% if obj.participant.warning %}
+                                        <i class="fa fa-exclamation-triangle blue" title="Przypał"></i>
+                                    {% endif %}
                                     - {{ obj.sign_date|date:"d.m.Y H:i" }}
                                     {% if obj.room is not None %} pokój: {{ obj.room }}{% endif %}
                                     {% if obj.volunteer is not None %}, wolontariusz: {{ obj.volunteer }}{% endif %}
@@ -173,6 +209,18 @@
                                     </a>
                                     {% if obj|has_birthday %}
                                          <i class="fa fa-birthday-cake blue"></i>
+                                    {% endif %}
+                                    {% if obj|which_batch|divisibleby:10 %}
+                                         <i class="fa fa-trophy blue" title={{ obj|which_batch }}></i>
+                                    {% endif %}
+                                    {% if obj|which_batch == 1 %}
+                                         <i class="fa fa-child blue" title="Pierwszy raz"></i>
+                                    {% endif %}
+                                    {% if not obj.photographing_agreement %}
+                                         <i class="fa fa-eye-slash blue" title="Brak zgody na fotografowanie"></i>
+                                    {% endif %}
+                                    {% if obj.participant.warning %}
+                                        <i class="fa fa-exclamation-triangle blue" title="Przypał"></i>
                                     {% endif %}
                                     - {{ obj.sign_date|date:"d.m.Y H:i" }}
                                     {% if obj.room is not None %} pokój: {{ obj.room }}{% endif %}
