--- a/coordinatepanel/templates/coordinatepanel/person.html
+++ b/coordinatepanel/templates/coordinatepanel/person.html
@@ -135,7 +135,7 @@
                     {% endif %}
 
                     <span class="bold">Zgoda na fotografowanie:</span>
-                    {% if training_person.person.photographing_agreement == False %}
+                    {% if training_person.photographing_agreement == False %}
                         Nie
                     {% else %}
                         Tak
