--- a/dj/templates/dj/includes/volunteer_form_template.html
+++ b/dj/templates/dj/includes/volunteer_form_template.html
@@ -10,6 +10,7 @@
     </div>
 {% endfor %}
 {% for field in volunteer_batch_form %}
+    {% if field.name != 'photographing_agreement' %}
     <div class="form-group row">
         <label class="medium-bold col-xs-12 col-sm-5 col-lg-3">{{ field.label_tag }}</label>
         <div class="col-xs-12 col-sm-7 col-lg-5">
@@ -18,6 +19,7 @@
         <span class="text-danger small">{{ field.errors }}</span>
         <span class="offset-lg-3 offset-sm-5 f-10 gray p-l-15">{{ field.help_text }}</span>
     </div>
+    {%  endif %}
 {% endfor %}
 {% for field in volunteer_form %}
     <div class="form-group row">
@@ -35,12 +37,22 @@
             <a href="http://drabinajakubowa.pl/pl/kontakt-z-drabina-jakubowa/polityka-przetwarzania-danych-osobowych">Polityka Przetwarzania Danych Osobowych</a>
         </div>
     {% endifequal %}
-    {% ifequal field.name 'photographing_agreement' %}
+    </div>
+{% endfor %}
+{% for field in volunteer_batch_form %}
+    {% if field.name == 'photographing_agreement' %}
+    <div class="form-group row">
+        <label class="medium-bold col-xs-12 col-sm-5 col-lg-3">{{ field.label_tag }}</label>
+        <div class="col-xs-12 col-sm-7 col-lg-5">
+            {{ field|attr:"class:form-control" }}
+        </div>
+        <span class="text-danger small">{{ field.errors }}</span>
+        <span class="offset-lg-3 offset-sm-5 f-10 gray p-l-15">{{ field.help_text }}</span>
         <div class="small col-sm-12 text-right">
             Wyrażam zgodę Zgromadzeniu Zakonnemu Małe Dzieło Boskiej Opatrzności - Orioniści Prowincja Polska na
             fotografowanie i publikację zdjęć z moją osobą tylko do celów promocji Drabiny Jakubowej - Rekolekcji dla
             osób niepełnosprawnych.
         </div>
-    {% endifequal %}
     </div>
+    {% endif %}
 {% endfor %}
