--- a/homepanel/templates/homepanel/event_participant_sign.html
+++ b/homepanel/templates/homepanel/event_participant_sign.html
@@ -11,7 +11,11 @@
                         <button class="btn btn-default">Wróć</button>
                     </a>
 
-                    <h2>{{ participant }} - wydarzenia</h2>
+                    <h2>{{ participant }} - wydarzenia
+                        {% if participant.warning %}
+                            <i class="fa fa-exclamation-triangle red" title="Przypał"></i>
+                        {% endif %}
+                    </h2>
                     <hr /><br />
 
                     <ul>
