Update emails, contracts and certificates

--- a/coordinatepanel/templates/coordinatepanel/certificate/certificate.html
+++ b/coordinatepanel/templates/coordinatepanel/certificate/certificate.html
@@ -59,14 +59,13 @@
                     <tr>
                         <td class="center" colspan="2">
                             <span class="font-24 bold">
-                                Centrum Księdza Orione
-                                <br />
-                                w Brańszczyku
+                                Drabina Jakubowa
                                 <br/>
                             </span>
                             <span class="font-16 font">
-                                Dom Emeryta | Dom Rekolekcyjny <br />
-                                Drabina Jakubowa | Rehabilitacja+
+                                duszpasterstwo prowadzone przez<br />
+                                Zgromadzenie Zakonne Małe Dzieło Boskiej Opatrzności<br />
+                                Orioniści Prowincja Polska
                             </span>
                         </td>
                         <td colspan="3">
@@ -374,10 +373,7 @@
                 <br /><br /><br /><br /><br /><br />
 
                 <div class="center font-14">
-                    {{ home.address }}, {{ home.zip_code }} {{ home.city }}, {{ home.page_url }} | {{ home.email_address }};
-                    tel. {{ home.phone_number }}
-                    <br />
-                    NIP: {{ home.nip }}, Regon: {{ home.regon }}
+                    {{ home.address }}, {{ home.zip_code }} {{ home.city }}, {{ home.page_url }}; tel. {{ home.phone_number }}
                 </div>
 
             </div>
