--- a/coordinatepanel/templates/coordinatepanel/contract/all_contracts.html
+++ b/coordinatepanel/templates/coordinatepanel/contract/all_contracts.html
@@ -61,14 +61,13 @@
                     <tr>
                         <td class="center" colspan="2">
                             <span class="font-24 bold">
-                                Centrum Księdza Orione
-                                <br />
-                                w Brańszczyku
+                                Drabina Jakubowa
                                 <br/>
                             </span>
                             <span class="font-16 font">
-                                Dom Emeryta | Dom Rekolekcyjny <br />
-                                Drabina Jakubowa | Rehabilitacja+
+                                duszpasterstwo prowadzone przez<br />
+                                Zgromadzenie Zakonne Małe Dzieło Boskiej Opatrzności<br />
+                                Orioniści Prowincja Polska
                             </span>
                         </td>
                         <td colspan="3">
