--- a/dj/templates/dj/emails/event_email.html
+++ b/dj/templates/dj/emails/event_email.html
@@ -32,9 +32,7 @@
     <br /><br /><br />
 
 <div class="center">
-    ul. Jana Pawła II 1, 07-221 Brańszczyk, branszczyk.orione.pl | branszczyk@orione.pl; tel. 297423565
-    <br />
-    NIP: PL7621267298, Regon: 550462602
+    {{ home.address }}, {{ home.zip_code }} {{ home.city }}, {{ home.page_url }}; tel. {{ home.phone_number }}
 </div>
 
     <br /><br /><br />
